# search_anime

./: .gitignore  Cargo.toml  index.html  serve.py
assets/: script.js  sw.js
pkg/: index.html  script.js  search_anime_bg.wasm  style.css  sw.js
src/: lib.rs  merge_tags.json
