[package]
name = "search_anime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = {version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
lazy_static = "1.4.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6.0"
